tests/ui/derives/eq-ord/derives-span-Ord.stderr
error[E0277]: the trait bound `Error: Ord` is not satisfied
  --> $DIR/derives-span-Ord.rs:10:9
   |
LL | #[derive(Ord, Eq, PartialOrd, PartialEq)]
   |          --- in this derive macro expansion
...
LL |         x: Error,
   |         ^^^^^^^^ the trait `Ord` is not implemented for `Error`
   |
help: consider annotating `Error` with `#[derive(Ord)]`
   |
LL + #[derive(Ord)]
LL | struct Error;
   |

error[E0277]: the trait bound `Error: Ord` is not satisfied
  --> $DIR/derives-span-Ord.rs:17:9
   |
LL | #[derive(Ord, Eq, PartialOrd, PartialEq)]
   |          --- in this derive macro expansion
...
LL |         Error,
   |         ^^^^^ the trait `Ord` is not implemented for `Error`
   |
help: consider annotating `Error` with `#[derive(Ord)]`
   |
LL + #[derive(Ord)]
LL | struct Error;
   |

error[E0277]: the trait bound `Error: Ord` is not satisfied
  --> $DIR/derives-span-Ord.rs:23:5
   |
LL | #[derive(Ord, Eq, PartialOrd, PartialEq)]
   |          --- in this derive macro expansion
LL | struct Struct {
LL |     x: Error,
   |     ^^^^^^^^ the trait `Ord` is not implemented for `Error`
   |
help: consider annotating `Error` with `#[derive(Ord)]`
   |
LL + #[derive(Ord)]
LL | struct Error;
   |

error[E0277]: the trait bound `Error: Ord` is not satisfied
  --> $DIR/derives-span-Ord.rs:28:5
   |
LL | #[derive(Ord, Eq, PartialOrd, PartialEq)]
   |          --- in this derive macro expansion
LL | struct TupleStruct(
LL |     Error,
   |     ^^^^^ the trait `Ord` is not implemented for `Error`
   |
help: consider annotating `Error` with `#[derive(Ord)]`
   |
LL + #[derive(Ord)]
LL | struct Error;
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
